--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-alpha.2",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "knex": "^0.12.6",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "pg": "^6.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
