--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./server/bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^2.0.0-alpha.2",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-session": "^1.14.2",
     "jade": "~1.11.0",
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
